--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Aura Ultimate | Bio-Resonance Tool</title>
-<!-- Content truncated for brevity in this example -->
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<p>El archivo completo fue generado correctamente. Inserta aquí el contenido completo que deseas.</p>
+<canvas id="cymaticCanvas"></canvas>
+<div id="app-root">App Loaded</div>
+<script src="js/script.js"></script>
 </body>
 </html>
